Name:                subspace
Version:             0.1
Synopsis:            peer to peer communication library
License:             GPL-3
License-File:        LICENSE
Author:              Thomas Gatzweiler
Stability:           Experimental
Copyright:           2013 Thomas Gatzweiler
Homepage:            https://github.com/7h0ma5/subspace
Bug-Reports:         https://github.com/7h0ma5/subspace/issues
Build-Depends:       base
Build-Type:          Simple
Cabal-Version:       >= 1.8

Library
  Hs-Source-Dirs: src
  Exposed-Modules:
    Subspace.DHT.Network
    Subspace.DHT.State
    Subspace.DHT.Node
    Subspace.DHT.Protocol
    Subspace.DHT.Crypto
  Build-Depends:
      network
    , binary >= 0.7
    , largeword
    , bytestring
    , mtl
    , base >= 4 && <= 5

Executable subspace
  Hs-Source-Dirs: src
  Main-Is: Subspace/Main.hs
  Build-Depends:
      subspace
    , base
    , binary >= 0.7
    , largeword
    , network
    , bytestring
    , mtl

Test-Suite subspace-tests
  Type: exitcode-stdio-1.0
  Hs-Source-Dirs: src tests
  Main-Is: TestSuite.hs
  Other-Modules:
      Subspace.DHT.Node.Tests
  Build-Depends:
      subspace
    , base
    , binary >= 0.7
    , largeword
    , network
    , bytestring
    , mtl
    , test-framework
    , test-framework-quickcheck2
    , QuickCheck < 2.6

Source-Repository head
  type: git
  location: git://github.com/7h0ma5/subspace.git
